[package]
edition = '2021'
name = 'sold'
version = '0.77.2'

[[bin]]
name = 'sold'
path = 'src/main.rs'

[dependencies]
anyhow = "1.0.81"
atty = '0.2'
dunce = '1.0'
failure = '0.1.8'
once_cell = '1.19'
serde_json = { features = ['unbounded_depth'], version = '1.0' }
strip-ansi-escapes = '0.2'

clap = { features = ['derive'], version = '4.5' }
serde = { features = ['derive'], version = '1.0' }

tvm_abi = { path = '../../tvm-sdk/tvm_abi' }
tvm_assembler = { path = '../../tvm-sdk/tvm_assembler', features = [
  'gosh',
]  }
tvm_block = { path = '../../tvm-sdk/tvm_block' }
tvm_types = { path = '../../tvm-sdk/tvm_types' }

[build-dependencies]
cmake = '0.1'

[dev-dependencies]
assert_cmd = '2.0'
predicates = '3.1'

[lib]
name = 'sold_lib'
path = 'src/lib.rs'
